Update and rename Copy_List_with_Random_Pointer.md to Copy_List_with_Random_Pointer.adoc

--- a/DS_Questions/Data_Structures/Linked_Lists/Copy/Copy_List_with_Random_Pointer.adoc
+++ b/DS_Questions/Data_Structures/Linked_Lists/Copy/Copy_List_with_Random_Pointer.adoc
@@ -1,9 +1,9 @@
-**Copy Custom Linked list**
-- [Approach-1, Hashmap & Recursion](#a1)
+:toc:
+:toclevels: 9
 
-## [Self Video](https://youtu.be/pM_GZ2tbLUA)
+=== link:https://youtu.be/pM_GZ2tbLUA[Self Video]
 
-### [Copy List with Random Pointer](https://leetcode.com/problems/copy-list-with-random-pointer/)
+=== link:https://leetcode.com/problems/copy-list-with-random-pointer/[138. Copy List with Random Pointer]
 Deep Copy the given linked list and return the copied linked list.
 ```c
 struct list {
@@ -11,22 +11,25 @@ struct list {
   struct list* next;
   struct list* random;
 };
-```
+
 - Examples
-```c
 Input: head = [[7,null],[13,0],[11,4],[10,2],[1,0]]
 Output: [[7,null],[13,0],[11,4],[10,2],[1,0]]
 ```
 
-<a name=a1></a>
-### Approach, Hashmap & Recursion
-#### Logic
-- _1._ Allocate a node copy value present node. Save original and new node addresses on hashmap
-  - Take a hashmap `unordered_map<key=original_Node*, value=newly_allocated_Node*>`
-- _2._ `new_node->next = Find(key = old_node->next on HashMap) & return value`
-- _3._ `new_node->random = Find(key = old_node->random on HashMap) & return value`
+=== Approach, Hashmap & Recursion
+==== Logic
+1. Allocate a node copy value present node. Save original and new node addresses on hashmap
+* Take a hashmap `unordered_map<key=original_Node*, value=newly_allocated_Node*>`
+ 2. `new_node->next = Find(key = old_node->next on HashMap) & return value`
+3. `new_node->random = Find(key = old_node->random on HashMap) & return value`
 
-#### Code
+==== Complexity
+* *Time:* 2O(n) = O(n). n nodes in linked list. Since recursion is done for next, random for every node.
+* *Space:* O(n). Hashmap
+
+==== Code
+===== CPP
 ```cpp
 /*
 // Definition for a Node.
@@ -66,6 +69,4 @@ public:
     }
 };
 ```
-#### Complexity
-- **Time:** 2O(n) = O(n). n nodes in linked list. Since recursion is done for next, random for every node.
-- **Space:** O(n). Hashmap
+
