--- a/System-Design/Scalable/Ecommerce_Systems/Amazon/README.adoc
+++ b/System-Design/Scalable/Ecommerce_Systems/Amazon/README.adoc
@@ -53,8 +53,38 @@ POST https://<server-hostname>:port/v1/request/homeScreen ? user_id=<> & product
 ```
 
 === BW Estimates. (bytes coming into system/sec)
+1000 req/sec. Each req = 10KB. 10k x 1000 = 10MB/sec
 
+=== Storage Estimates 
+What we will store?
 
-=== Storage Estimates (Writes/sec)
+* Purchase history: (1 item=1MB)
+** 1 user buys 1 product in 10 days. Month=3. Year=36. 1MBx100Mx36x5 = 20GB
+* Product Listing: (1 Listing = Description+Images+Video = 100MB)
+** *Ask Interviewer: How many products?* 100M
+** 100M x 100MB x 365 x 5 = 10TB x 1500 = 10PB (Peta byte)
+* Product Reviews = (1 review = Text+Image+Video = 10MB)
+** *Ask Interviewer: How many product have reviews?* 10%=10M. On average 100 reviews. Total Reviews= 1Billion. 10MBx1B = 10TB
+```c
+20GB + 10PB + 10TB =~ 10PB
+```
 
-=== Home Screen Rendering
+== DB Schema (List all objects?)
+=== Entities
+users, products, reviews, sellers, questions, answers, wishlists
+
+=== Relationship in entities
+```c
+```
+
+=== Actual Tables
+* User table(user_id(primary key), name, email, activation_timestamp, country, age, wishlists, //Array<addresses> (use seperate address table for scalabilty)//)
+* User_Addresses table(address_id(pk), user_id(fk))
+* Products table(product_id(primary key), description_txt, seller_id(fk), //Array<images_url>, Array<video_urls>(use seperate media table for scalabilty)//)
+* Product Media table(id, product_id(fk), image_url/video_url, caption, description)
+* Seller table (seller_id, name, address, email, phone, pan, gst_no)
+* Review table(review_id, product_id(fk), review_description, //Array<image_url>, Array<video_url>(Will go in review media table)//, user_id(fk))
+* Review Media Table (similar to product media table)
+* Wishlist (id, user_id(fk), number_of_items, Array<product_id>, name, created_date)
+* Question (id, product_id(fk), description, user_id_who_raised_question(fk))
+* Answer (id, question_id(fk), description, user_id_who_answered(fk))
