--- a/DS_Questions/Questions/Number/Bitwise/Counting_Bits.adoc
+++ b/DS_Questions/Questions/Number/Bitwise/Counting_Bits.adoc
@@ -1,6 +1,8 @@
 :toc:
 :toclevels: 6
 
+=== link:https://youtu.be/e53lYMVQGO0[Self Video]
+
 === link:https://leetcode.com/problems/counting-bits/description/[338. Counting Bits]
 - Given an integer n, return an array ans of length n + 1 such that for each i (0 < = i < = n), ans[i] is the number of 1's in the binary representation of i.
 * *Always Do as per REQUIREMENT*
