Update and rename Pascal_Traingle.md to Pascal_Traingle.adoc

--- a/DS_Questions/Questions/vectors_arrays/2d-grid/Pascal_Traingle.adoc
+++ b/DS_Questions/Questions/vectors_arrays/2d-grid/Pascal_Traingle.adoc
@@ -1,14 +1,15 @@
-**Pascal Traingle = Combination Tree**
+:toc:
+:toclevels: 6
 
+=== link:https://leetcode.com/problems/pascals-triangle/[118. Pascal's Triangle = Combination Tree]
+Given an integer numRows, return the first numRows of Pascal's triangle.
 
-### [Pascal Traingle](https://leetcode.com/problems/pascals-triangle/)
-- Given an integer numRows, return the first numRows of Pascal's triangle.
-- In Pascal's triangle, each number is the sum of the two numbers directly above it as shown:
+*Requirement: What is time complexity, Can you do better?*
 
-<img src=https://upload.wikimedia.org/wikipedia/commons/0/0d/PascalTriangleAnimated2.gif width=200/>
+In Pascal's triangle, each number is the sum of the two numbers directly above it as shown:
 
-<img src=https://www.mathsisfun.com/numbers/images/pascals-triangle-add.svg width=200/>
-- Examples:
+image::https://upload.wikimedia.org/wikipedia/commons/0/0d/PascalTriangleAnimated2.gif?raw=true[pascal triangle]
+
 ```c
 Input: numRows = 1
 Output: [[1]]
@@ -23,23 +24,8 @@ Output: [[1],[1,1],[1,2,1],[1,3,3,1],[1,4,6,4,1]]
 4   1 4 6 4 1 //    4          5
 ```
 
-### Pascal Triangle represents combination tree
-```c
-    0 1 2 3 4
-0   1
-1   1 1    
-2   1 2 1  
-3   1 3 3 1
-4   1 4 6 4 1
-
-4
- C   = table[4][3] = 6
-  3
-```
-
-<a name=a1></a>
-## Approach-1  //Dynamic Programming. Time:O(n<sup>2</sup>)
-#### Logic
+=== Approach-1  //Dynamic Programming. Time:O(n^2^)
+==== Logic
 - Understand how each row are created from prev row.
   - 1st and last elements of any row are always 1.  `v[row][0]=1; v[row][size]=1` Other elements = `v[row][col] = v[row-1][col-1] + v[row-1][col]`
   - row: 0. `v[0][0]=1`
@@ -54,8 +40,9 @@ Output: [[1],[1,1],[1,2,1],[1,3,3,1],[1,4,6,4,1]]
 3   1  3  3  1
 4   1  4  6  4  1
 ```
-#### Complexity
-  - **Time:** O(n<sup>2</sup>)    //n=number of rows
+
+==== Complexity
+* *Time:* O(n<sup>2</sup>)    //n=number of rows
 ```c
   row
   1     1x1
@@ -63,9 +50,11 @@ Output: [[1],[1,1],[1,2,1],[1,3,3,1],[1,4,6,4,1]]
   3     3x3
         nxn
 ```
-  - **Space:** O(n<sup>2</sup>). Taking vector to store nxn elements.
-#### Code
-```c++
+* *Space:* O(1). n^2^ matrix formed everytime
+
+==== Code
+===== CPP
+```cpp
 class Solution {
   using VecVec = vector<vector<int>>;
 public:
@@ -90,15 +79,4 @@ public:
         
   }
 };
-int main(){
-  Solution s;
-  int n=5;
-  VecVec v = s.generate(n);
-  for (int i=0;i<n;++i){
-    for (int j=0;j<n;++j){
-      cout << v[i][j] << " ";
-    }
-    cout << "\n";
-  }
-}
 ```
