--- a/DS_Questions/Questions/vectors_arrays/2d-grid/Pascal_Traingle.adoc
+++ b/DS_Questions/Questions/vectors_arrays/2d-grid/Pascal_Traingle.adoc
@@ -26,12 +26,8 @@ Output: [[1],[1,1],[1,2,1],[1,3,3,1],[1,4,6,4,1]]
 
 === Approach-1  //Dynamic Programming. Time:O(n^2^)
 ==== Logic
-- Understand how each row are created from prev row.
-  - 1st and last elements of any row are always 1.  `v[row][0]=1; v[row][size]=1` Other elements = `v[row][col] = v[row-1][col-1] + v[row-1][col]`
-  - row: 0. `v[0][0]=1`
-  - row: 1. `v[1][0]=1, v[1][1]=1`
-  - row: 2. `v[2][0]=1, v[2][2]=1, v[2][1] = v[1][0]+v[1][1] = 2`
-  - row: 3. `v[3][0]=1, v[3][3]=1, v[3][1] = v[2][0]+v[2][1] = 3, v[3][2] = v[2][2]+v[2][3] = 3`  
+* 1st and last elements of every row are always 1.  
+** v[row][0]=1; v[row][size]=1. Other elements = `v[row][col] = v[row-1][col-1] + v[row-1][col]`
 ```c
     0  1  2  3  4
 0   1
@@ -40,43 +36,44 @@ Output: [[1],[1,1],[1,2,1],[1,3,3,1],[1,4,6,4,1]]
 3   1  3  3  1
 4   1  4  6  4  1
 ```
+* 1. if n==1, return {{1}}
+* 2. if n>1, construct row from prev row and return
 
 ==== Complexity
 * *Time:* O(n<sup>2</sup>)    //n=number of rows
-```c
-  row
-  1     1x1
-  2     2x2
-  3     3x3
-        nxn
-```
 * *Space:* O(1). n^2^ matrix formed everytime
 
 ==== Code
 ===== CPP
 ```cpp
 class Solution {
-  using VecVec = vector<vector<int>>;
+    using vvI = vector<vector<int>>;
+    using vI = vector<int>;
 public:
-  vector<vector<int>> generate(int n) {
-    VecVec v;
-    int size = 1;
+    vector<vector<int>> generate(int n) {
+        vector<vector<int>> out;
 
-    for (int i=0; i<n; ++i){
-      vector<int> temp(size);
-      temp[0] = 1;
+        // Create vector<int> of 1 row value=1
+        vector<int> temp(1, 1);
+        out.push_back(temp);
 
-      for (int j=1; j < i; ++j)
-        temp[j] = v[i-1][j-1] +v[i-1][j];
+        // if n==1, return
+        if (n==1)
+            return out;
 
-      temp[size-1] = 1;
+        // Start from 1st row
+        // i==1 {1,1}
+        for (int i=1; i<n; i++) {   //Always start from 2nd row
+            vector<int> temp(i+1, 1);
 
-      v.push_back(temp);
-      temp.clear();
-      size++;
+            // Create row from prev row, when i>=2
+            for (int j=1; i>=2 && j<i; j++) {           //skip 1st, last col as they are 1 always
+                temp[j] = out[i-1][j-1]+out[i-1][j];
+            }
+            out.push_back(temp);
+        }
+
+        return out;        
     }
-    return v;        
-        
-  }
 };
 ```
