--- a/System-Design/Concepts/Pagination.adoc
+++ b/System-Design/Concepts/Pagination.adoc
@@ -3,3 +3,5 @@
 
 === Pagination
 Server instead of returning 1 million results at once, it paginate the results. ie it return a subset of results, say 20 or 50 products, along with information on how to fetch the next set of results. This way, it doesn't overwhelm the client or server with a massive response.
+
+Database query can support pagination. It retrieves a limited number of results (e.g., 20, 50, or 100) based on an offset and limit
