--- a/System-Design/Scalable/Ecommerce_Systems/Amazon/README.adoc
+++ b/System-Design/Scalable/Ecommerce_Systems/Amazon/README.adoc
@@ -92,8 +92,8 @@ question 1 ---- * answers
 === Actual Tables
 * User table(user_id(primary key), name, email, activation_timestamp, country, age, wishlists, +++<del>+++ Array<addresses> +++</del>+++(use seperate address table for scalabilty))
 * User_Addresses table(address_id(pk), user_id(fk))
-* Products table(product_id(primary key), description_txt, seller_id(fk), +++<del>+++ Array<images_url>, Array<video_urls>+++</del>+++(use seperate media table for scalabilty))
-* Product Media table(id, product_id(fk), image_url/video_url, caption, description)
+* Products table(product_id(primary key), description_txt, price, availability, seller_id(fk), +++<del>+++ Array<images_url>, Array<video_urls>+++</del>+++(use seperate media table for scalabilty))
+* Product Media table(id, product_id(fk), image_url/video_url(on link:System-Design/Concepts/Databases/Object_Storage/README.adoc[Object Storage]), caption, description)
 * Seller table (seller_id, name, address, email, phone, pan, gst_no)
 * Review table(review_id, product_id(fk), review_description, +++<del>+++ Array<image_url>, Array<video_url> +++</del>+++ (Will go in review media table), user_id(fk))
 * Review Media Table (similar to product media table)
@@ -116,23 +116,28 @@ sequenceDiagram
 ```mermaid
 sequenceDiagram
   participant u as ClientMobileApp
-  box datacenter
+  box datacenter1
   participant lb as loadbalancer
   participant app as AppServer
   participant ca as Cache
-  participant ptdb as Products-table(DB)
+  participant ptdb1 as Products-table-1(DB)
+  end
+  box datacenter2
+  participant ptdb2 as Products-table-2(DB)
   end
 
-  Note right of user: type product-name in search bar
+  Note right of u: type product-name in search bar
   u ->> lb: (user_id, product_name=smartphone, filters(optional))
   
   lb ->> app: REST API(searchProduct)
   app ->> ca: Product list
   ca -) app: No
-  app ->> ptdb: SELECT * from table where description=smartphone(Pagination=on)
-  Note right of ptdb: create search response
-  ptdb -->> app: product list(1-50 items of 1 million entries)
+  app ->> ptdb1: SELECT * from table1 where <br>description=smartphone(Pagination=on)
+  app ->> ptdb2: SELECT * from table1 where <br>description=smartphone(Pagination=on)
+  ptdb1 -->> app: product list(1-50 items of 1 million entries)
+  ptdb2 -->> app: product list(1-50 items of 1 million entries)
+  Note over app: Aggregate result<br>from Shards
   app -->> ca: Update
   app -->> u: Product list(Pagination 1-50 entries)
 ```
-link:/System-Design/Concepts/Pagination.adoc[Pagination]
+link:/System-Design/Concepts/Pagination.adoc[Pagination], link:/System-Design/Concepts/Databases/Database_Scaling/Sharding[Sharding]
